# MedAgent-EHR

./: .gitignore  README.md  docker-compose.yml  fable5_suggest.md
docs/: index.en.html  (+2 more)
fhir-mcp-server/: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
fhir-mcp-server/scripts/: load_synthea.py  smoke_test.py
fhir-mcp-server/src/fhir_mcp/: __init__.py  config.py  envelope.py  fhir_client.py  server.py  services.py
fhir-mcp-server/src/fhir_mcp/calc/: __init__.py  formulas.py
fhir-mcp-server/src/fhir_mcp/coding/: __init__.py  resolver.py
fhir-mcp-server/src/fhir_mcp/coding/tables/: __init__.py  seed.py
fhir-mcp-server/src/fhir_mcp/tools/: __init__.py  _helpers.py  calculate.py  clinical.py  coding.py  notes.py  patient.py  system.py  write.py
fhir-mcp-server/src/fhir_mcp/writes/: __init__.py  builders.py  staging.py  validators.py
fhir-mcp-server/tests/: test_calc.py  test_envelope.py  test_resolver.py  test_staging.py  test_validators.py
medagent-ehr/: .env.example  .gitignore  README.md  pyproject.toml
medagent-ehr/benchmark/: adapter.py  llm_perf_probe.py  run_medagentbench.py  run_single_task.py
medagent-ehr/src/medagent/: __init__.py  config.py
medagent-ehr/src/medagent/agent/: __init__.py  executor.py  orchestrator.py  planner.py  recovery.py  state.py  verifier.py
medagent-ehr/src/medagent/llm/: __init__.py  ollama_client.py  templates.py
medagent-ehr/src/medagent/llm/prompts/: executor.j2  planner.j2  verifier.j2
medagent-ehr/src/medagent/mcp/: __init__.py  client.py
medagent-ehr/src/medagent/trace/: __init__.py  langfuse_hook.py
medagent-ehr/src/medagent/web/: __init__.py  app.py
medagent-ehr/src/medagent/web/static/: app.js  style.css
medagent-ehr/src/medagent/web/templates/: index.html
medagent-ehr/tests/: test_agent_parsing.py  test_orchestrator.py  test_recovery.py  test_state.py  test_templates.py
(+1 files in other folders)
