[project]
name = "fhir-mcp-server"
version = "0.1.0"
description = "An MCP server exposing a FHIR R4 EHR as LLM-friendly tools."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
    "mcp",               # MCP SDK — exact version pinned after API check (Phase 3)
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "rapidfuzz>=3.9",    # fuzzy matching for resolve_code
    "rank-bm25>=0.2.2",  # lexical ranking for search_clinical_notes
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
