[project]
name = "medagent-ehr"
version = "0.1.0"
description = "An open-source, local, agentic EHR copilot with a clinical-safety Verifier, evaluated on MedAgentBench."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
    "mcp",                # MCP client SDK — exact version pinned after API check (Phase 6)
    "langfuse",           # observability — exact version pinned after API check (Phase 6)
    "jinja2>=3.1",
    "flask>=3.0",
    "cryptography>=42.0",  # required by Flask's self-signed (adhoc) HTTPS
    "httpx>=0.27",
    "requests>=2.31",  # used by vendored MedAgentBench utils.py (benchmark grading)
    "pydantic>=2.7",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"medagent.llm" = ["prompts/*.j2"]
"medagent.web" = ["templates/*.html", "static/*"]
